resolved overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* width */
 ::-webkit-scrollbar {
-  width: 5px;
+  /*width: 5px;*/
 }
 
 /* Track */
@@ -19,15 +19,15 @@
   background: #555;
 }
 .App{
-  width:100%;
-  height:100%;
+  width:100vw;
+  height:100vh;
   max-height:100%;
 }
 .App-header {
   background-color: #282c34;
   justify-content: left;
   width: 100vw;
-  height: 10vh;
+  height: 60px;
   color: white;
 }
 .App-header-elem{
@@ -43,37 +43,42 @@
 .App-credit a {
   color: #ffcbcb;
 }
-
-.content-wrapper{
-  width: 100%;
-  height: 100%;
-  background-color: aqua;
-}
-.content-wrapper-padding{
-  height: 100%;
-  width: 100%;
-}
 .main-container{
   width:100vw;
-  height: 90vh;
+  height: calc(100vh - 60px);
   display: grid;
-  justify-items: center;
-  grid-column-gap: 1vw;
   grid-template-columns: 1fr 1fr;
 }
+.content-wrapper{
+  width:100%;
+  height:100%;
+  background-color: white;
+  justify-content: center;
 
+  overflow: hidden;
+}
+.content-wrapper-padding{
+  float: right;
+  height: 100%;
+  width: 95%;
+}
+#preview-wrapper-padding{
+  float: left;
+  margin: 10px;
+}
 #editor-wrapper textarea{
   resize:none;
+  width:100%;
+  height:100%;
   padding: 0;
   border: 0;
-  width: 100%;
-  height: 100%;
-  overflow: visible;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 #preview-wrapper{
   overflow-y: scroll;
 }
 #preview{
   width:100%;
-  background-color: orange;
+  /*background-color: orange;*/
 }
